--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.0.22" />
     <PackageReference Include="Ninject" Version="3.3.4" />
   </ItemGroup>
 
