--- a/test_project/View.csproj
+++ b/test_project/View.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Model\Model.csproj" />
     <ProjectReference Include="..\Presenter\Presenter.csproj" />
+    <ProjectReference Include="..\Sim\Sim.csproj" />
   </ItemGroup>
 
 </Project>
